--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <img src=".docs/logo.png" alt="Olesya Haz" class="logo-watermark">
                 </div>
                 <div class="info-side">
-                    <div class="role">Counseling & Therapy</div>
+                    <div class="role">Wellbeing Consultant</div>
                     <h2>Olesya Haz</h2>
                     <div class="contact-list">
                         <div class="contact-item">
@@ -394,7 +394,7 @@
                             <span class="icon">📷</span> @olesyahaz.psy
                         </div>
                         <div class="contact-item" style="margin-top: 10px; font-style: italic; color: #888;">
-                            "Transformation is a journey, and I will walk it with you."
+                            "The safe space where your truth is heard." ~
                         </div>
                     </div>
                 </div>
