--- a/index.html
+++ b/index.html
@@ -245,85 +245,227 @@
             margin-bottom: 10px;
             margin-top: 40px;
         }
+
+        /* Letterhead Styles */
+        .letterhead {
+            width: 100%;
+            aspect-ratio: 1 / 1.414;
+            /* A4 Ratio */
+            background-color: white;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            color: var(--text-dark);
+        }
+
+        .lh-header {
+            padding: 50px 60px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+        }
+
+        .lh-logo {
+            width: 140px;
+            height: auto;
+        }
+
+        .lh-contact-mini {
+            text-align: right;
+            font-size: 0.85rem;
+            color: var(--primary);
+            line-height: 1.6;
+            font-weight: 600;
+        }
+
+        .lh-body {
+            flex: 1;
+            padding: 20px 60px;
+            position: relative;
+            font-size: 1rem;
+            line-height: 1.6;
+            color: #444;
+        }
+
+        /* Watermark in center */
+        .lh-body::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 40%;
+            height: 40%;
+            background-image: url('.docs/logo.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            opacity: 0.04;
+            pointer-events: none;
+            filter: grayscale(100%);
+        }
+
+        .lh-footer {
+            background-color: var(--primary);
+            color: white;
+            padding: 20px 60px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 0.8rem;
+        }
+
+        .lh-footer-content {
+            display: flex;
+            gap: 30px;
+            width: 100%;
+            justify-content: center;
+        }
+
+        .lh-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .lh-item svg {
+            width: 14px;
+            height: 14px;
+            stroke: white;
+            fill: none;
+            stroke-width: 2;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+
+        /* Responsive adjustments for the long letterhead */
+        @media (max-width: 600px) {
+            .lh-header {
+                padding: 20px;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+                text-align: center;
+            }
+
+            .lh-contact-mini {
+                text-align: center;
+            }
+
+            .lh-footer {
+                padding: 20px;
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            .lh-footer-content {
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+            }
+        }
     </style>
 </head>
 
 <body>
-
     <div class="container">
         <h1 class="page-title">Business Card Concepts</h1>
-
         <!-- Design 2: The Nurturer -->
         <div>
             <div class="card-label">Front Side</div>
             <div class="card design-2">
-                <div class="image-side">
-                    <img src=".docs/logo.png" alt="Olesya Haz" class="logo-watermark">
-                </div>
+                <div class="image-side"><img src=".docs/logo.png" alt="Olesya Haz" class="logo-watermark"></div>
                 <div class="info-side">
                     <div class="role">Wellbeing Consultant</div>
                     <h2>Olesya Haz</h2>
                     <div class="contact-list">
-                        <div class="contact-item">
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <div class="contact-item"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
                                     <path
                                         d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
                                     </path>
                                     <polyline points="22,6 12,13 2,6"></polyline>
-                                </svg>
-                            </span>
-                            heal@olesyahaz.com
-                        </div>
-                        <div class="contact-item">
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                </svg></span>heal@olesyahaz.com </div>
+                        <div class="contact-item"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
                                     <path
                                         d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.12 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
                                     </path>
-                                </svg>
-                            </span>
-                            +971 54 280 8118
-                        </div>
-                        <div class="contact-item">
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                </svg></span>+971 54 280 8118 </div>
+                        <div class="contact-item"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
                                     <circle cx="12" cy="12" r="10"></circle>
                                     <line x1="2" y1="12" x2="22" y2="12"></line>
                                     <path
                                         d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
                                     </path>
-                                </svg>
-                            </span>
-                            olesyahaz.com
-                        </div>
-                        <div class="contact-item">
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                </svg></span>olesyahaz.com </div>
+                        <div class="contact-item"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24">
                                     <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                                </svg>
-                            </span>
-                            @olesyahaz.psy
-                        </div>
-                        <div class="contact-item" style="margin-top: 10px; font-style: italic; color: #888;">
-                            "The safe space where your truth is heard."
+                                </svg></span>@olesyahaz.psy </div>
+                        <div class="contact-item" style="margin-top: 10px; font-style: italic; color: #888;">"The
+                            safe space where your truth is heard."
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div>
+        <div style="page-break-after: always;">
             <div class="card-label">Back Side</div>
-            <div class="card design-2-back">
-                <img src=".docs/logo.png" alt="Olesya Haz Logo" class="center-logo">
+            <div class="card design-2-back"><img src=".docs/logo.png" alt="Olesya Haz Logo" class="center-logo">
             </div>
         </div>
-
+        <!-- Letterhead -->
+        <div>
+            <div class="card-label">Letterhead</div>
+            <div class="letterhead">
+                <div class="lh-header"><img src=".docs/logo.png" alt="Olesya Haz" class="lh-logo">
+                    <div class="lh-contact-mini">OLESYA HAZ<br>Wellbeing Consultant </div>
+                </div>
+                <div class="lh-body">
+                    <!-- Placeholder content structure to visualize spacing -->
+                    <!-- <p style="color: #999; margin-top: 40px;">[Date]</p>
+                    <p style="color: #999; margin-top: 40px;">[Recipient Name]<br>[Company
+                        Name]<br>[Address]</p>
+                    <p style="margin-top: 60px; color: #ccc;">Dear [Name], </p> -->
+                    <!-- <p style="margin-top: 20px; color: #eee;  background: #f9f9f9; padding: 20px; border-radius: 4px;">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> -->
+                </div>
+                <div class="lh-footer">
+                    <div class="lh-footer-content">
+                        <div class="lh-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+                                </path>
+                                <polyline points="22,6 12,13 2,6"></polyline>
+                            </svg>heal@olesyahaz.com </div>
+                        <div class="lh-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.12 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                                </path>
+                            </svg>+971 54 280 8118 </div>
+                        <div class="lh-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <line x1="2" y1="12" x2="22" y2="12"></line>
+                                <path
+                                    d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
+                                </path>
+                            </svg>olesyahaz.com </div>
+                        <div class="lh-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                            </svg>@olesyahaz.psy </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </body>
 
 </html>
